third_party/move/move-compiler-v2/tests/checking/typing/type_variable_join_threaded_unpack_invalid.exp

Diagnostics:
error: expected `integer` but found `bool`
   ┌─ tests/checking/typing/type_variable_join_threaded_unpack_invalid.move:34:9
   │
34 │         f1
   │         ^^
